force-app/main/default/objects/b3d__Comment_Thread__c/b3d__Comment_Thread__c.object-meta.xml
<CustomObject>
    <label>Comment Thread</label>
    <nameField>
        <displayFormat>THREAD-{0}</displayFormat>
        <label>Comment Thread Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comment Threads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>