force-app/main/default/objects/b3d__Comment_Thread__c/fields/b3d__Attributes__c.field-meta.xml
<CustomField>
    <fullName>b3d__Attributes__c</fullName>
    <label>Attributes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>