force-app/main/default/objects/b3d__Comment_Thread__c/fields/b3d__Collaborator_Name__c.field-meta.xml
<CustomField>
    <fullName>b3d__Collaborator_Name__c</fullName>
    <formula>b3d__Collaborator__r.b3d__Contact__r.FirstName  &amp; &quot; &quot; &amp; b3d__Collaborator__r.b3d__Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collaborator Name</label>
    <type>Text</type>
</CustomField>