force-app/main/default/objects/b3d__Comment_Thread__c/fields/b3d__Comments__c.field-meta.xml
<CustomField>
    <fullName>b3d__Comments__c</fullName>
    <label>Comments</label>
    <summaryForeignKey>b3d__Comment__c.b3d__Comment_Thread__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>