force-app/main/default/objects/b3d__Comment_Thread__c/fields/b3d__Context__c.field-meta.xml
<CustomField>
    <fullName>b3d__Context__c</fullName>
    <label>Context</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>