force-app/main/default/objects/b3d__Comment_Thread__c/fields/b3d__Has_Comments__c.field-meta.xml
<CustomField>
    <fullName>b3d__Has_Comments__c</fullName>
    <formula>b3d__Comments__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Comments</label>
    <type>Checkbox</type>
</CustomField>