force-app/main/default/objects/b3d__Comment_Thread__c/fields/b3d__Redline_Request__c.field-meta.xml
<CustomField>
    <fullName>b3d__Redline_Request__c</fullName>
    <label>Redline Request</label>
    <referenceTo>b3d__Redline_Request__c</referenceTo>
    <relationshipName>Comment_Threads</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>