force-app/main/default/objects/b3d__Comment_Thread__c/fields/b3d__Resolved_At__c.field-meta.xml
<CustomField>
    <fullName>b3d__Resolved_At__c</fullName>
    <label>Resolved At</label>
    <type>DateTime</type>
</CustomField>