force-app/main/default/objects/b3d__Comment_Thread__c/fields/b3d__Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>b3d__Resolved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resolved By</label>
    <referenceTo>b3d__Collaborator__c</referenceTo>
    <relationshipName>Comment_Threads1</relationshipName>
    <type>Lookup</type>
</CustomField>