force-app/main/default/objects/b3d__Comment_Thread__c/fields/b3d__Status__c.field-meta.xml
<CustomField>
    <fullName>b3d__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>