force-app/main/default/objects/b3d__Comment_Thread__c/fields/b3d__Suggestion_State__c.field-meta.xml
<CustomField>
    <fullName>b3d__Suggestion_State__c</fullName>
    <label>Suggestion State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>