force-app/main/default/objects/b3d__Comment_Thread__c/fields/b3d__Suggestion_Type__c.field-meta.xml
<CustomField>
    <fullName>b3d__Suggestion_Type__c</fullName>
    <label>Suggestion Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>