force-app/main/default/objects/b3d__Comment_Thread__c/fields/b3d__Thread_Status__c.field-meta.xml
<CustomField>
    <fullName>b3d__Thread_Status__c</fullName>
    <formula>IF(
    NOT(ISBLANK(b3d__Removed_At__c)), 
    &quot;Removed&quot;,
    IF(
        NOT(ISBLANK(b3d__Resolved_At__c)), 
        &quot;Resolved&quot;,
        IF(
            NOT(ISBLANK(b3d__Unlinked_At__c)), 
            &quot;Unlinked&quot;,
            IF(
	            NOT(ISBLANK(TEXT(b3d__Suggestion_State__c))), 
	            TEXT(b3d__Suggestion_State__c),
	            &quot;New&quot;
	        )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thread Status</label>
    <type>Text</type>
</CustomField>