force-app/main/default/objects/b3d__Comment_Thread__c/fields/b3d__Thread_Type__c.field-meta.xml
<CustomField>
    <fullName>b3d__Thread_Type__c</fullName>
    <label>Thread Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comment</fullName>
            </value>
            <value>
                <fullName>Suggestion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>